[project]
name = "rag-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-google-genai (>=2.1.4,<3.0.0)",
    "chromadb (>=0.6,<0.7)",
    "langchain-chroma (>=0.2.3,<0.3.0)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "pypdf (>=5.4.0,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
